--- a/PSP/T2. Prog Multihilo.md
+++ b/PSP/T2. Prog Multihilo.md
@@ -65,3 +65,9 @@ public class ThreadYield {
 > [!info] En espera no es lo mismo que dormido porque espera al hilo que le puso en espera
 
 > [!info] Sleep consume menos recursos que el wait porque wait está todo el rato preguntando (interrupciones a la CPU)
+
+> [!danger] EXAMEN FINON'T
+> 1. Ejercicio producto-consumidor
+> 2. Estados de los hilos
+> 3. Semáforos
+> 4. Sincro de hilos
